fix print view by avoiding page breaks inside sections

--- a/themes/modern-lancer/src/modern-html.css
+++ b/themes/modern-lancer/src/modern-html.css
@@ -83,6 +83,7 @@ body.pdf #container > header {
   margin-left: 3em;
   position: relative;
   display: block;
+  page-break-inside: avoid;
 }
 
 span.fa
